plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.4'
    id 'io.spring.dependency-management' version '1.1.3'
}

group = 'com.programmers'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
    targetCompatibility = '17'
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.beryx:text-io:3.4.1'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc:3.1.3'
    implementation 'org.springframework.boot:spring-boot-starter-aop:3.1.3'
    implementation 'com.mysql:mysql-connector-j:8.0.33'

    testImplementation "org.testcontainers:mysql:1.19.1"
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
}
